<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="iiti.progclub.app.chatapp_workshop.SignUp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#2f6699"
        android:text="@string/signup_screen_text"/>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/fullname"
            android:textColor="#120478"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/etFullNameSignUp"
            android:layout_width="0dp"
            android:textColor="#120478"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/username"
            android:textColor="#120478"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/etEmailSignUp"
            android:inputType="textEmailAddress"
            android:textColor="#120478"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/email"
            android:textColor="#120478"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/etUsernameSignUp"
            android:inputType="text"
            android:layout_width="0dp"
            android:textColor="#120478"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/password"
            android:textColor="#120478"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etPasswordSignUp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:textColor="#120478"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/confirmpass"
            android:textColor="#120478"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/etConfirmPassSignUp"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:textColor="#120478"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cbTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/termsNConditions" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:padding="15dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:background="@drawable/blue_button"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
