<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="iiti.progclub.app.chatapp_workshop.HomeScreen">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#120478"
            android:text="@string/contactToAdd"/>

        <EditText
            android:id="@+id/etNewContactUsername"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#2f6699"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnAddContactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/blue_button"
            android:text="@string/addContact"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvInfoHomeScreen"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="#2f6699"
            android:text="@string/curContacts"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <!--
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:background="@drawable/blue_button"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text=""/> -->

    </LinearLayout>

    <ListView
        android:id="@+id/lvAllContacts"
        android:textColor="#2f6699"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
